src/test/deca/context/invalid/indeclaredmethod.deca
// test condition : method doesn't exist
//resultat : indeclaredmethod.deca:9:4: 'A' was not declared in this scope.

class A{

}
{
    A a;
    A.get();
}